<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    tools:context="com.me.azcs.reviewbooks.activities.MainActivity"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>


    <LinearLayout
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:text="@string/title_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/bookName"
        android:paddingBottom="@dimen/paddingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <TextView
            android:visibility="gone"
            tools:text="@string/auther_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    <EditText
        android:visibility="gone"
        android:id="@+id/authorName"
        android:paddingBottom="@dimen/paddingEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

        <ProgressBar
            android:visibility="gone"
            android:id="@id/progressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search" />

        <LinearLayout
            android:gravity="bottom|center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:gravity="bottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>