<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.me.azcs.reviewbooks.activities.ResultBooksActivity"
android:orientation="vertical">

<android.support.v7.widget.Toolbar
    android:id="@+id/my_toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/colorPrimaryDark"
    android:elevation="4dp"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

<LinearLayout
    android:id="@+id/book_description"
    android:padding="@dimen/default_padding"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/default_padding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:contentDescription="@string/book_cover"
            android:id="@+id/book_cover"
            tools:src="@mipmap/ic_launcher_round"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/default_padding">

            <TextView
                android:id="@+id/bookName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="The Shallows" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="shown stevinon" />

            <TextView
                android:id="@+id/rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="4.5" />


        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/description"
        tools:text="fdkfdhgdjgdjkfghdkfhgdkhgkdfhgdkjgdhgghfghfg
            dfkjhdfkhgdkfghkdjhgdkfhgkdfggghfhfghf
            gdfkjghdfkhgdkhgkdfhgkdfhg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/paddingEditText"/>

    <!--<view-->
        <!--android:layout_marginBottom="@dimen/default_padding"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="1dp"/>-->

    <Button
        android:id="@+id/favorite"
        android:text="@string/favorite"
        android:contentDescription="@string/favorite_description"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>